--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -9,82 +9,14 @@ on:
 
 jobs:
   linux:
-    name: Linux
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
-
-      - name: Install Node.js modules
-        run: npm install
-
-      - name: Update Node.js modules
-        run: npm update
-
-      - name: Install vsce
-        run: npm i -g vsce
-
-      - name: VSCE Packge
-        run: |
-          vsce package
-          VSIX_FILE=$(find ./ -name '*vscode-leetcode-problem-rating*.vsix')
-          echo "VSIX_FILE=$VSIX_FILE" >> $GITHUB_ENV
-          echo $VSIX_FILE
-      - uses: actions/upload-artifact@v2
-        with:
-          name: vsix_file
-          path: ${{ env.VSIX_FILE }}
-
-  windows:
-    name: Windows
-    runs-on: windows-latest
-    timeout-minutes: 30
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
-
-      - name: Install Node.js modules
-        run: npm install
-
-      - name: Update Node.js modules
-        run: npm update
-
-      - name: Install vsce
-        run: npm i -g vsce
-
-      - name: VSCE Packge
-        run: |
-          vsce package
-
-  darwin:
-    name: macOS
-    runs-on: macos-latest
-    timeout-minutes: 30
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
-
-      - name: Install Node.js modules
-        run: npm install
-
-      - name: Update Node.js modules
-        run: npm update
-
-      - name: Install vsce
-        run: npm i -g vsce
-
-      - name: VSCE Packge
-        run: vsce package
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        path: main
+        - run: |
+            sed -i "s/\"version\":.*$/\"version\": \"${{ github.event.inputs.tag }}\",/" package.json
+            git config user.name github-actions
+            git config user.email github-actions@github.com
+            git add .
+            git commit -m "update version"
+            git push
