--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -9,6 +9,11 @@ on:
 
 jobs:
   linux:
+    name: Linux
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+
     - name: Checkout
       uses: actions/checkout@v3
       with:
