--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -13,15 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
-
-    - name: Checkout
-      uses: actions/checkout@v3
-      with:
-        path: main
-        - run: |
-            sed -i "s/\"version\":.*$/\"version\": \"${{ github.event.inputs.tag }}\",/" package.json
-            git config user.name github-actions
-            git config user.email github-actions@github.com
-            git add .
-            git commit -m "update version"
-            git push
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          path: main
+        run: |
+          sed -i "s/\"version\":.*$/\"version\": \"${{ github.event.inputs.tag }}\",/" package.json
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "update version"
+          git push
