--- a/.github/workflows/update_version.yml
+++ b/.github/workflows/update_version.yml
@@ -5,13 +5,13 @@ on:
     inputs:
       tag:
         description: "test Tag"
-        required: true
+        type: string
 
 jobs:
-  linux:
+  jobA:
     name: Linux
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    if: github.event.inputs.input1 != ''
     steps:
       - uses: actions/checkout@v2
       - run: |
