--- a/.github/workflows/update_version.yml
+++ b/.github/workflows/update_version.yml
@@ -12,6 +12,7 @@ on:
       pr:
         description: "需要合并提交"
         type: boolean
+        default: false
 
 jobs:
   jobA:
@@ -32,7 +33,7 @@ jobs:
   jobB:
     name: createPr
     runs-on: ubuntu-latest
-    if: github.event.inputs.pr == true &&  github.event.inputs.tag != ''
+    if: ${{ github.event.inputs.pr }} &&  github.event.inputs.tag != ''
     steps:
       - uses: actions/checkout@v2
       - run: |
