--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
           git push
   jobB:
     name: createPr
-    needs: version
+    needs: jobA
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -49,7 +49,7 @@ jobs:
           gh pr create -B main --title 'Merge release${{ github.event.inputs.tag }} into main' --body 'Created by Github action'
   linux:
     name: Linux
-    needs: createPr
+    needs: jobB
     runs-on: ubuntu-latest
     timeout-minutes: 30
     if: ${{ github.event.inputs.market }}
