--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,7 +56,10 @@ jobs:
     if: ${{ github.event.inputs.market }}
     steps:
       - uses: actions/checkout@v2
-
+      - name: updatepackage
+        if: github.event.inputs.tag != ''
+        run: |
+          sed -i "s/\"version\":.*$/\"version\": \"${{ github.event.inputs.tag }}\",/" package.json
       - name: Setup Node.js environment
         uses: actions/setup-node@v2
         with:
