--- a/package.json
+++ b/package.json
@@ -1134,6 +1134,7 @@
         "highlight.js": "^10.7.2",
         "lodash": "^4.17.21",
         "markdown-it": "12.3.2",
+        "markdown-it-katex": "^2.0.3",
         "mkdirp": "^1.0.4",
         "moment": "^2.29.1",
         "nconf": "^0.11.2",
