--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
         "alwaysStrict": true,
         // Tells TypeScript to read JS files, as
         // normally they are ignored as source files
-        "allowJs": true,
+        // "allowJs": true,
         // Generate d.ts files
         // "declaration": true,
         // // This compiler run should
