--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-leetcode-problem-rating",
     "displayName": "LeetCode",
     "description": "%main.description%",
-    "version": "2.17.1",
+    "version": "2.17.2",
     "author": "ccagml",
     "publisher": "ccagml",
     "license": "MIT",
@@ -12,9 +12,9 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/ccagml/leetcode_vsc"
+        "url": "https://github.com/ccagml/leetcode-extension"
     },
-    "homepage": "https://github.com/ccagml/leetcode_vsc/README.md",
+    "homepage": "https://github.com/ccagml/leetcode-extension/README.md",
     "categories": [
         "Other",
         "Snippets",
