修复 c++ 调试 断点问题

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,4 +9,8 @@
         "**/node_modules": true,
         ".vscode-test": true
     },
+    "files.associations": {
+        "*.gafq": "lua",
+        "functional": "cpp"
+    },
 }
