filepath 格式可以保存在工作区

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,4 +13,10 @@
         "*.gafq": "lua",
         "functional": "cpp"
     },
+    "leetcode-problem-rating.filePath": {
+        "default": {
+            "folder": "",
+            "filename": "${id}.${kebab-case-name}_${yyyymmdd}.${ext}"
+        }
+    },
 }
