--- a/package.json
+++ b/package.json
@@ -1165,6 +1165,7 @@
     },
     "dependencies": {
         "ansi-styles": "3.2.1",
+        "axios": "^1.3.4",
         "cheerio": "1.0.0-rc.12",
         "fs-extra": "^10.0.0",
         "he": "1.2.0",
