获取题目错误,则不生成文件

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,7 @@
             "request": "attach",
             "name": "attach process",
             "processId": "${command:PickProcess}",
+            "continueOnAttach": true
         },
         {
             "name": "Launch Tests",
