--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,6 +29,13 @@
             "continueOnAttach": true
         },
         {
+            "type": "node",
+            "request": "attach",
+            "name": "attach 9229",
+            "port": 9229, // 与子进程中的 --inspect 端口一致
+            "continueOnAttach": true
+        },
+        {
             "name": "Launch Tests",
             "type": "extensionHost",
             "request": "launch",
